[package]
name = "indexlist1"
version = "0.1.1"
edition = "2021"

authors = ["Bijan Nazem <https://github.com/bijanvan>", "steveklabnik <steve@steveklabnik.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/bijanvan/indexlist"
documentation = "https://docs.rs/indexlist1"
homepage = "https://github.com/bijanvan/indexlist"
description = """
A doubly linked list, backed by a vector
"""

[badges]
travis-ci = { repository = "bijanvan/indexlist" }
appveyor = { repository = "bijanvan/indexlist" }

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
rand = "0.5.5"

[lib]
name = "indexlist"
path = "src/lib.rs"

[[bench]]
name = "benchmarks"
harness = false

[[bin]]
name = "indexlistdemo"
path = "src/bin.rs"
